# moo-nad

./: CHANGELOG.md  README.md  moo-nad-x.cabal  moo-nad.cabal
lib/: Moo.hsig
lib-example-impl/: Moo.hs
lib-example-logic-that-logs/: LogicThatLogs.hs  Moo.hsig
lib/Moo/: Prelude.hs
test/: tests.hs
