cabal-version:      3.0
name:               moo-nad
version:            0.1.0.0

author:             Daniel Diaz
maintainer:         diaz_carrete@yahoo.com

extra-source-files: CHANGELOG.md

library
    signatures:       Moo
    exposed-modules:  Moo.Prelude
    build-depends:    base ^>= 4.15.0.0,
--                    sop-core ^>= 0.5.0.0
--                    mtl ^>= 2.2
    hs-source-dirs:   lib
    default-language: Haskell2010

library example-logic-that-logs
    signatures:       Moo
    exposed-modules:  LogicThatLogs
    build-depends:    base ^>= 4.15.0.0,
                      moo-nad
    hs-source-dirs:   lib-example-logic-that-logs
    default-language: Haskell2010

library example-impl
    exposed-modules:  Moo
    build-depends:    base ^>= 4.15.0.0
    hs-source-dirs:   lib-example-impl
    default-language: Haskell2010
