cabal-version:      3.0
name:               moo-nad
version:            0.1.0.0

author:             Daniel Diaz
maintainer:         diaz_carrete@yahoo.com

extra-source-files: CHANGELOG.md

common common
    build-depends:    base ^>= 4.15.0.0

-- Indefinite library which provides an invocation helper over some abstract
-- readerlike monad carrying a record-of-functions.
library
    import:           common
    signatures:       Moo
    exposed-modules:  Moo.Prelude
    build-depends:    
    hs-source-dirs:   lib
    default-language: Haskell2010

-- Example indefinite program logic.
library example-logic-that-logs
    import:           common
    signatures:       Moo
    exposed-modules:  LogicThatLogs
    build-depends:   
                      moo-nad
    hs-source-dirs:   lib-example-logic-that-logs
    default-language: Haskell2010

-- Example implementation library.
library example-impl
    import:           common
    exposed-modules:  Moo
    build-depends:    
                      transformers ^>= 0.5
    hs-source-dirs:   lib-example-impl
    default-language: Haskell2010

-- The tests put together the moo-nad library, the example indefinite package
-- with the program logic, and the sublibrary with a possible implementation.
test-suite tests
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          tests.hs
    build-depends:    
      tasty           ^>= 1.3.1,
      tasty-hunit     ^>= 0.10.0.2,
      moo-nad,
      example-logic-that-logs,
      example-impl
    default-language: Haskell2010
